--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -32,6 +32,10 @@
         <label for="plate_number" class="form-label">Plate number</label>
         <input type="text" name="plate_number" class="form-control" id="plate_number">
       </div>
+      <div class="mb-3">
+          <label for="date"  class="form-label">date</label>
+          <input type="date"  name="date" class="form-control" id="date">
+      </div>
       <button type="submit" class="btn btn-primary">Search</button>
     </form>
    <!-- Modal -->
@@ -76,7 +80,10 @@
                 <label for="ticket_no" class="form-label">ticket number</label>
                 <input type="text" name="ticket_no" class="form-control" id="ticket_no" aria-describedby="ticket number">
               </div>
-            
+              <div class="mb-3">
+                <label for="plate_number" class="form-label">Plate number</label>
+                <input type="text" name="plate_number" class="form-control" id="plate_number">
+              </div>
             <button type="submit" class="btn btn-primary">Close ticket</button>
           </form>
         </div>
